Combine error codes HostNotFound and NodeNotFound

XMLWordPrintableJSON

    • Fully Compatible
    • Platforms 2018-09-10, Service Arch 2018-10-08
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      These two error codes appear to mean the same thing. Worse, HostNotFound appears to never be returned outside of tests, but we have code that checks for it to make choices about operation retry. That code does not check for NodeNotFound, which at least could be returned, though may not be in practice.

            Assignee:
            Annie Black
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: