SERVER-24620 Combine error codes HostNotFound and NodeNotFound